@@ -1,4 +1,5 @@
 pkginclude_HEADERS= \
 status.h \
 scan.h \
-module.h 
+module.h \
+handle.h 
